Convert String.format calls to formatted
Replace String.format(...) with .formatted() across codebase.
No behavior changes intended.

117 files changed, 318 insertions, 414 deletions