@@ -2112,7 +2112,7 @@ public class ObjectReader
 
     protected final void _assertNotNull(String paramName, Object src) {
         if (src == null){
-            throw new IllegalArgumentException(String.format("argument \"%s\" is null", paramName));
+            throw new IllegalArgumentException("argument \"%s\" is null".formatted(paramName));
         }
     }
 
