@@ -1071,9 +1071,8 @@ public abstract class BasicDeserializerFactory
                     Class<?> returnType = factory.getRawReturnType();
                     // usually should be class, but may be just plain Enum<?> (for Enum.valueOf()?)
                     if (!returnType.isAssignableFrom(enumClass)) {
-                        ctxt.reportBadDefinition(type, String.format(
-"Invalid `@JsonCreator` annotated Enum factory method [%s]: needs to return compatible type",
-factory.toString()));
+                        ctxt.reportBadDefinition(type, "Invalid `@JsonCreator` annotated Enum factory method [%s]: needs to return compatible type".formatted(
+                                factory.toString()));
                     }
                     deser = EnumDeserializer.deserializerForCreator(
                         config, enumClass, factory, valueInstantiator, creatorProps,
