@@ -936,12 +936,12 @@ public class JacksonAnnotationIntrospector
                         type = type.withStaticTyping();
                     } else {
                         throw _databindException(
-                                String.format("Cannot refine serialization type %s into %s; types not related",
+                                "Cannot refine serialization type %s into %s; types not related".formatted(
                                         type, serClass.getName()));
                     }
                 } catch (IllegalArgumentException iae) {
                     throw _databindException(iae,
-                            String.format("Failed to widen type %s with annotation (value %s), from '%s': %s",
+                            "Failed to widen type %s with annotation (value %s), from '%s': %s".formatted(
                                     type, serClass.getName(), a.getName(), iae.getMessage()));
                 }
             }
@@ -974,12 +974,12 @@ public class JacksonAnnotationIntrospector
                             keyType = keyType.withStaticTyping();
                         } else {
                             throw _databindException(
-                                    String.format("Cannot refine serialization key type %s into %s; types not related",
+                                    "Cannot refine serialization key type %s into %s; types not related".formatted(
                                             keyType, keyClass.getName()));
                         }
                     } catch (IllegalArgumentException iae) {
                         throw _databindException(iae,
-                                String.format("Failed to widen key type of %s with concrete-type annotation (value %s), from '%s': %s",
+                                "Failed to widen key type of %s with concrete-type annotation (value %s), from '%s': %s".formatted(
                                         type, keyClass.getName(), a.getName(), iae.getMessage()));
                     }
                 }
@@ -1013,12 +1013,12 @@ public class JacksonAnnotationIntrospector
                            contentType = contentType.withStaticTyping();
                        } else {
                            throw _databindException(
-                                   String.format("Cannot refine serialization content type %s into %s; types not related",
+                                   "Cannot refine serialization content type %s into %s; types not related".formatted(
                                            contentType, contentClass.getName()));
                        }
                    } catch (IllegalArgumentException iae) { // shouldn't really happen
                        throw _databindException(iae,
-                               String.format("Internal error: failed to refine value type of %s with concrete-type annotation (value %s), from '%s': %s",
+                               "Internal error: failed to refine value type of %s with concrete-type annotation (value %s), from '%s': %s".formatted(
                                        type, contentClass.getName(), a.getName(), iae.getMessage()));
                    }
                }
@@ -1303,7 +1303,7 @@ public class JacksonAnnotationIntrospector
                 type = tf.constructSpecializedType(type, valueClass);
             } catch (IllegalArgumentException iae) {
                 throw _databindException(iae,
-                        String.format("Failed to narrow type %s with annotation (value %s), from '%s': %s",
+                        "Failed to narrow type %s with annotation (value %s), from '%s': %s".formatted(
                                 type, valueClass.getName(), a.getName(), iae.getMessage()));
             }
         }
@@ -1324,7 +1324,7 @@ public class JacksonAnnotationIntrospector
                     type = ((MapLikeType) type).withKeyType(keyType);
                 } catch (IllegalArgumentException iae) {
                     throw _databindException(iae,
-                            String.format("Failed to narrow key type of %s with concrete-type annotation (value %s), from '%s': %s",
+                            "Failed to narrow key type of %s with concrete-type annotation (value %s), from '%s': %s".formatted(
                                     type, keyClass.getName(), a.getName(), iae.getMessage()));
                 }
             }
@@ -1344,7 +1344,7 @@ public class JacksonAnnotationIntrospector
                     type = type.withContentType(contentType);
                 } catch (IllegalArgumentException iae) {
                     throw _databindException(iae,
-                            String.format("Failed to narrow value type of %s with concrete-type annotation (value %s), from '%s': %s",
+                            "Failed to narrow value type of %s with concrete-type annotation (value %s), from '%s': %s".formatted(
                                     type, contentClass.getName(), a.getName(), iae.getMessage()));
                 }
             }
