@@ -314,10 +314,10 @@ public abstract class BeanSerializerBase
                     TypeSerializer typeSer = (TypeSerializer) type.getContentType().getTypeHandler();
                     if (typeSer != null) {
                         // for now, can do this only for standard containers...
-                        if (ser instanceof StdContainerSerializer<?>) {
+                        if (ser instanceof StdContainerSerializer<?> serializer) {
                             // ugly casts... but necessary
                             @SuppressWarnings("unchecked")
-                            ValueSerializer<Object> ser2 = (ValueSerializer<Object>)((StdContainerSerializer<?>) ser).withValueTypeSerializer(typeSer);
+                            ValueSerializer<Object> ser2 = (ValueSerializer<Object>)serializer.withValueTypeSerializer(typeSer);
                             ser = ser2;
                         }
                     }
@@ -542,8 +542,7 @@ public abstract class BeanSerializerBase
 
                     for (int i = 0, len = _props.length; ; ++i) {
                         if (i == len) {
-                            ctxt.reportBadDefinition(_beanType, String.format(
-                                    "Invalid Object Id definition for %s: cannot find property with name %s",
+                            ctxt.reportBadDefinition(_beanType, "Invalid Object Id definition for %s: cannot find property with name %s".formatted(
                                     ClassUtil.getTypeDescription(_beanType), ClassUtil.name(propName)));
                         }
                         BeanPropertyWriter prop = _props[i];
