@@ -708,7 +708,7 @@ public class ThrowableDeserializerTest extends DatabindTestUtil
                 return;
             }
         }
-        fail(String.format("StackTraceElement #%d, property '%s' differs: expected %s, actual %s",
+        fail("StackTraceElement #%d, property '%s' differs: expected %s, actual %s".formatted(
                 ix, prop, exp, act));
     }
 }
