@@ -564,8 +564,8 @@ public class ExternalTypeIdTest extends DatabindTestUtil
 
         assertEquals(w.typeEnum, w2.typeEnum);
         assertTrue(w.value.equals(w2.value),
-            String.format("Expected %s = %s; got back %s = %s",
-                w.value.getClass().getSimpleName(), w.value.toString(), w2.value.getClass().getSimpleName(), w2.value.toString()));
+                "Expected %s = %s; got back %s = %s".formatted(
+                        w.value.getClass().getSimpleName(), w.value.toString(), w2.value.getClass().getSimpleName(), w2.value.toString()));
     }
 
     @Test
@@ -584,7 +584,7 @@ public class ExternalTypeIdTest extends DatabindTestUtil
 
         assertEquals(w.typeEnum, w2.typeEnum);
         assertTrue(w.value.equals(w2.value),
-            String.format("Expected %s = %s; got back %s = %s",
+                "Expected %s = %s; got back %s = %s".formatted(
                         w.value.getClass().getSimpleName(), w.value.toString(), w2.value.getClass().getSimpleName(), w2.value.toString()));
     }
 
